# Archivist

./: .gitignore  CLAUDE.md  README.md  archivist.py  archivist_design.md  config.yaml  csv_utils.py  drive_e.csv  executor.py  extractor.py  inheritance.py  llm_client.py  organizer.py  plan.txt  pyproject.toml  reporter.py  requirements.txt  scanner.py  summarizer.py  triager.py  wizard.py
.claude/: settings.local.json
tests/: conftest.py  test_archivist.py  test_csv_utils.py  test_executor.py  test_extractor.py  test_inheritance.py  test_llm_client.py  test_organizer.py  test_reporter.py  test_scanner.py  test_triager.py
